--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Styles Conference</title>
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="assets/stylesheets/reset.css">
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>
       <a href="index.html">Styles Conference</a>
     </h1>
@@ -23,19 +23,19 @@
       <a href="register.html">Register</a>
     </nav>
   </header>
-  <section>
+  <section class="hero container">
     <h2>Dedicated to the Craft of Building Websites</h2>
     <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-    <a href="register.html">Register Now</a>
+    <a class="btn btn-alt" href="register.html">Register Now</a>
   </section>
-  <section>
+  <section class="container">
     <a href="speakers.html">
       <h5>Speakers</h5>
       <h3>World-Class Speakers</h3>
     </a>
     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
   </section>
-  <footer>
+  <footer class="container">
     <small>&copy; Styles Conference</small>
     <nav>
       <a href="index.html">Home</a>
