--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-  <header class="container">
-    <h1>
-      <a href="index.html">Styles Conference</a>
+  <header class="container group">
+    <h1 class="logo">
+       <a href="index.html">Styles <br> Conference</a>
     </h1>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-    <nav>
+    <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
       <a href="schedule.html">Schedule</a>
@@ -35,7 +35,7 @@
     </a>
     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
   </section>
-  <footer class="container">
+  <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav>
       <a href="index.html">Home</a>
@@ -46,6 +46,5 @@
     </nav>
   </footer>
 
-</body>
 </body>
 </html>
