--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <a href="register.html">Register</a>
     </nav>
   </header>
-  <section class="hero container">
+  <section class="hero grid">
     <h2>Dedicated to the Craft of Building Websites</h2>
     <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
     <a class="btn btn-alt" href="register.html">Register Now</a>
   </section>
-  <section class="container">
+  <section class="grid">
     <a href="speakers.html">
       <h5>Speakers</h5>
       <h3>World-Class Speakers</h3>
